# OpenGL-Template

./: CMakeLists.txt  LICENSE.md
src/: main.cpp
